# Slack-Reaction-Bot

./: Dockerfile  README.md  pyproject.toml
src/: app.py
